fix(language-selector): fixed language selector position on mobile

--- a/packages/checkout-full/core/src/components/plug-checkout-full/partials/plug-checkout-full-content/plug-checkout-full-content.scss
+++ b/packages/checkout-full/core/src/components/plug-checkout-full/partials/plug-checkout-full-content/plug-checkout-full-content.scss
@@ -1,7 +1,6 @@
 .plug-checkout-full-content__container {
   display: block;
   width: 100%;
-  height: 100%;
 }
 
 .plug-checkout-full-content__main {
